--- a/_pages/speakers.html
+++ b/_pages/speakers.html
@@ -158,3 +158,39 @@ permalink: /speakers/
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+            <img src="/assets/images/speakers/elisabete.jpeg" alt="Speaker Karen Gómez" width="150" />
+            <div class="caption">
+                <h3 class="text-center">Elisabete Narvaez</h3>
+                <p class="role-container">
+                    <span class="strong">Rol:</span> Agile PM
+                </p>
+                <p>
+                    <span class="strong">Trabajo en:</span> Endava
+                </p>
+                <p>
+                    <span class="strong">Experiencia:</span>
+                    LLevo varios años en proyectos de diferente naturaleza: turismo, mejora de procesos, transformación
+                    de organizaciones, cambios de plataformas, pero lo que me apasiona es cambiar el mindset de las
+                    personas involucradas en proyectos, es trabajar el "ser" junto con el "hacer". Soy aficionada por
+                    Agilismo y gerencia de proyectos, pero son los proyectos de desarrollo y manutención de software,
+                    especialmente las de Apps las que más me generan interés.
+                </p>
+                <p>
+                    <span class="strong">Título de tu charla:</span> ¿Cómo llegar al mundo del desarrollo sin ser
+                    ingeniera/o?
+                </p>
+                <p>
+                    <span class="strong">Sobre tu charla:</span>
+                    Entender que la carrera que una persona estudia no define los cambios que uno puede hacer en su vida
+                    laboral. Que el mundo de la tecnologia tiene apertura para diferente tipos de caminos y que no está
+                    limitado a las tradicionales profesiones.
+                </p>
+                <!-- <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
+            </div>
+        </div>
+    </div>
+</div>
