updated some coaches

--- a/_pages/coaches.html
+++ b/_pages/coaches.html
@@ -27,10 +27,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Endava
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -46,11 +42,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Little Taller
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
-
             </div>
         </div>
     </div>
@@ -65,10 +56,6 @@ permalink: /coaches/
                 </p>
                 <p>
                     <span class="strong">Trabajo en:</span> Bunny Studio
-                </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
                 </p>
             </div>
         </div>
@@ -85,11 +72,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Mercado Libre
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
-
             </div>
         </div>
     </div>
@@ -107,10 +89,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Globant
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -125,11 +103,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Tirant lo Blanch
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
-
             </div>
         </div>
     </div>
@@ -145,10 +118,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Endava
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -162,10 +131,6 @@ permalink: /coaches/
                 </p>
                 <p>
                     <span class="strong">Trabajo en:</span> RewardOps
-                </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
                 </p>
             </div>
         </div>
@@ -184,10 +149,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Globant
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -201,10 +162,6 @@ permalink: /coaches/
                 </p>
                 <p>
                     <span class="strong">Trabajo en:</span> Endava
-                </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
                 </p>
 
             </div>
@@ -222,10 +179,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Endava
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -239,10 +192,6 @@ permalink: /coaches/
                 </p>
                 <p>
                     <span class="strong">Trabajo en:</span> Tranqi
-                </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
                 </p>
             </div>
         </div>
@@ -261,10 +210,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Wompi
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -280,10 +225,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Humantelligence Inc
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -291,7 +232,7 @@ permalink: /coaches/
 
     <div class="col-sm-3 col-md-3">
         <div class="thumbnail">
-            <img src="/assets/images/coaches/daniel.jpg" alt="Coach Daniel Pareja" width="150" />
+            <img src="/assets/images/coaches/daniel-pareja.jpg" alt="Coach Daniel Pareja" width="150" />
             <div class="caption">
                 <h3 class="text-center">Daniel Pareja</h3>
                 <p class="role-container">
@@ -300,16 +241,12 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> 
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
     <div class="col-sm-3 col-md-3">
         <div class="thumbnail">
-            <img src="/assets/images/coaches/camilo.jpg" alt="Coach David Leal" width="150" />
+            <img src="/assets/images/coaches/david-leal.jpeg" alt="Coach David Leal" width="150" />
             <div class="caption">
                 <h3 class="text-center">David Leal</h3>
                 <p class="role-container">
@@ -318,16 +255,12 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Tranqi
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
 </div>
 
-<!-- <div class="row">
+<div class="row">
     <div class="col-sm-3 col-md-3">
         <div class="thumbnail">
             <img src="/assets/images/coaches/santiago.jpg" alt="Coach Santiago Castañeda" width="150" />
@@ -339,17 +272,13 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> Picap LATAM
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
 
     <div class="col-sm-3 col-md-3">
         <div class="thumbnail">
-            <img src="/assets/images/coaches/johathan.jpg" alt="Coach Jonathan Salinas" width="150" />
+            <img src="/assets/images/coaches/johathan-salinas.jpg" alt="Coach Jonathan Salinas" width="150" />
             <div class="caption">
                 <h3 class="text-center">Jonathan Andres Salinas Garzon</h3>
                 <p class="role-container">
@@ -358,10 +287,6 @@ permalink: /coaches/
                 <p>
                     <span class="strong">Trabajo en:</span> 
                 </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
             </div>
         </div>
     </div>
@@ -369,46 +294,7 @@ permalink: /coaches/
 
     <div class="col-sm-3 col-md-3">
         <div class="thumbnail">
-            <img src="/assets/images/coaches/daniel.jpg" alt="Coach Daniel Pareja" width="150" />
-            <div class="caption">
-                <h3 class="text-center">Daniel Pareja</h3>
-                <p class="role-container">
-                    <span class="strong">Rol:</span> 
-                </p>
-                <p>
-                    <span class="strong">Trabajo en:</span> 
-                </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-3 col-md-3">
-        <div class="thumbnail">
-            <img src="/assets/images/coaches/camilo.jpg" alt="Coach David Leal" width="150" />
-            <div class="caption">
-                <h3 class="text-center">David Leal</h3>
-                <p class="role-container">
-                    <span class="strong">Rol:</span> Senior Software Engineer
-                </p>
-                <p>
-                    <span class="strong">Trabajo en:</span> Tranqi
-                </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-sm-3 col-md-3">
-        <div class="thumbnail">
-            <img src="/assets/images/coaches/daniel-arenas.jpg" alt="Coach Daniel Arenas" width="150" />
+            <img src="/assets/images/coaches/daniel.jpg" alt="Coach Daniel Arenas" width="150" />
             <div class="caption">
                 <h3 class="text-center">Daniel Arenas</h3>
                 <p class="role-container">
@@ -424,4 +310,4 @@ permalink: /coaches/
             </div>
         </div>
     </div>
-</div> -->
+</div>
