--- a/_pages/coaches.html
+++ b/_pages/coaches.html
@@ -232,14 +232,14 @@ permalink: /coaches/
 
     <div class="col-sm-3 col-md-3">
         <div class="thumbnail">
-            <img src="/assets/images/coaches/daniel-pareja.jpg" alt="Coach Daniel Pareja" width="150" />
+            <img src="/assets/images/coaches/daniel-pareja.jpeg" alt="Coach Daniel Pareja" width="150" />
             <div class="caption">
                 <h3 class="text-center">Daniel Pareja</h3>
                 <p class="role-container">
-                    <span class="strong">Rol:</span> 
+                    <span class="strong">Rol:</span> Docente
                 </p>
                 <p>
-                    <span class="strong">Trabajo en:</span> 
+                    <span class="strong">Trabajo en:</span> Universidad de San Buenaventura 
                 </p>
             </div>
         </div>
@@ -276,7 +276,7 @@ permalink: /coaches/
         </div>
     </div>
 
-    <div class="col-sm-3 col-md-3">
+    <!-- <div class="col-sm-3 col-md-3">
         <div class="thumbnail">
             <img src="/assets/images/coaches/johathan-salinas.jpg" alt="Coach Jonathan Salinas" width="150" />
             <div class="caption">
@@ -289,7 +289,7 @@ permalink: /coaches/
                 </p>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <div class="col-sm-3 col-md-3">
