--- a/_pages/speakers.html
+++ b/_pages/speakers.html
@@ -13,45 +13,10 @@ permalink: /speakers/
     .strong {
         font-weight: 700;
     }
-
 </style>
 
+
 <div class="row">
-    <div class="col-sm-6 col-md-6">
-        <div class="thumbnail">
-            <img src="/assets/images/speakers/karen_gomez.jpg" alt="Speaker Karen Gómez" width="150" />
-            <div class="caption">
-                <h3 class="text-center">Karen Cristina Gómez Muñoz</h3>
-                <p class="role-container">
-                    <span class="strong">Rol:</span> Emprendedora y CEO de empresa de tecnología
-                </p>
-                <p>
-                    <span class="strong">Trabajo en:</span> APPSUS SAS
-                </p>
-                <p>
-                    <span class="strong">Experiencia:</span>
-                    Ingeniera en Electrónica y Telecomunicaciones con especialización en desarrollo de soluciones
-                    informáticas de la
-                    Universidad del Cauca. Emprendedora, fundadora y CEO de Appsus SAS, empresa dedicada al desarrollo
-                    de soluciones software
-                    para el sector gobierno de Colombia y LATAM.
-                </p>
-                <p>
-                    <span class="strong">Título de tu charla:</span> Tips para emprender en la industria 4.0 y no morir
-                    en el intento.
-                </p>
-                <p>
-                    <span class="strong">Sobre tu charla:</span>
-                    Quiero compartir desde mi experiencia como emprendedora en la industria 4.0, algunos tips y consejos
-                    útiles para quienes se están
-                    aventurando en el camino del emprendimiento o que tienen una idea de negocio con potencial, que
-                    puedan servir para convertir las
-                    ideas o sueños en empresas exitosas.
-                </p>
-                <!-- <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
-            </div>
-        </div>
-    </div>
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
             <img src="/assets/images/speakers/kelly.jpeg" alt="Speaker Karen Gómez" width="150" />
@@ -85,6 +50,40 @@ permalink: /speakers/
             </div>
         </div>
     </div>
+
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
+            <img src="/assets/images/coaches/erika.jpeg" alt="Speaker Karen Gutiérrez" width="150" />
+            <div class="caption">
+                <h3 class="text-center">Erika Gutiérrez</h3>
+                <p class="role-container">
+                    <span class="strong">Rol:</span> Ingeniera de Software
+                </p>
+                <p>
+                    <span class="strong">Trabajo en:</span> Mercado Libre
+                </p>
+                <p>
+                    <span class="strong">Experiencia:</span>
+                    Ingeniera multimedia, finalizando maestría en ingeniería de software, con experiencia en desarrollo
+                    web front y back. He trabajado en el área de la investigación para temas de la salud como desarrollo
+                    de terapias para niños con discapacidad auditiva y paralisis cerebral. Experiencia en el área de la
+                    tecnología trabajando desde hace 6 años en esta área.
+                </p>
+                <p>
+                    <span class="strong">Título de tu charla:</span> Mi Superpoder es la Programación
+                </p>
+                <p>
+                    <span class="strong">Sobre tu charla:</span>
+                    En esta charla conoceremos sobre mi superpoder es la programación un proyecto social qu busca
+                    enseñar a los niños desde las bases de la computación hasta conceptos avanzados de codificación con
+                    el fin de mostrarles alternativas para el buen uso de su tiempo libre y fortalecer otras áreas del
+                    conocimiento. A partir de este proyecto social, surge una herramienta para aprender a programar la
+                    cual lleva consigo el mismo nombre.
+                </p>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <div class="row">
@@ -161,6 +160,41 @@ permalink: /speakers/
 <div class="row">
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
+            <img src="/assets/images/speakers/karen_gomez.jpg" alt="Speaker Karen Gómez" width="150" />
+            <div class="caption">
+                <h3 class="text-center">Karen Cristina Gómez Muñoz</h3>
+                <p class="role-container">
+                    <span class="strong">Rol:</span> Emprendedora y CEO de empresa de tecnología
+                </p>
+                <p>
+                    <span class="strong">Trabajo en:</span> APPSUS SAS
+                </p>
+                <p>
+                    <span class="strong">Experiencia:</span>
+                    Ingeniera en Electrónica y Telecomunicaciones con especialización en desarrollo de soluciones
+                    informáticas de la
+                    Universidad del Cauca. Emprendedora, fundadora y CEO de Appsus SAS, empresa dedicada al desarrollo
+                    de soluciones software
+                    para el sector gobierno de Colombia y LATAM.
+                </p>
+                <p>
+                    <span class="strong">Título de tu charla:</span> Tips para emprender en la industria 4.0 y no morir
+                    en el intento.
+                </p>
+                <p>
+                    <span class="strong">Sobre tu charla:</span>
+                    Quiero compartir desde mi experiencia como emprendedora en la industria 4.0, algunos tips y consejos
+                    útiles para quienes se están
+                    aventurando en el camino del emprendimiento o que tienen una idea de negocio con potencial, que
+                    puedan servir para convertir las
+                    ideas o sueños en empresas exitosas.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-md-6">
+        <div class="thumbnail">
             <img src="/assets/images/speakers/elisabete.jpeg" alt="Speaker Karen Gómez" width="150" />
             <div class="caption">
                 <h3 class="text-center">Elisabete Narvaez</h3>
@@ -172,10 +206,13 @@ permalink: /speakers/
                 </p>
                 <p>
                     <span class="strong">Experiencia:</span>
-                    LLevo varios años en proyectos de diferente naturaleza: turismo, mejora de procesos, transformación
+                    LLevo varios años en proyectos de diferente naturaleza: turismo, mejora de procesos,
+                    transformación
                     de organizaciones, cambios de plataformas, pero lo que me apasiona es cambiar el mindset de las
-                    personas involucradas en proyectos, es trabajar el "ser" junto con el "hacer". Soy aficionada por
-                    Agilismo y gerencia de proyectos, pero son los proyectos de desarrollo y manutención de software,
+                    personas involucradas en proyectos, es trabajar el "ser" junto con el "hacer". Soy aficionada
+                    por
+                    Agilismo y gerencia de proyectos, pero son los proyectos de desarrollo y manutención de
+                    software,
                     especialmente las de Apps las que más me generan interés.
                 </p>
                 <p>
@@ -184,12 +221,14 @@ permalink: /speakers/
                 </p>
                 <p>
                     <span class="strong">Sobre tu charla:</span>
-                    Entender que la carrera que una persona estudia no define los cambios que uno puede hacer en su vida
-                    laboral. Que el mundo de la tecnologia tiene apertura para diferente tipos de caminos y que no está
+                    Entender que la carrera que una persona estudia no define los cambios que uno puede hacer en su
+                    vida
+                    laboral. Que el mundo de la tecnologia tiene apertura para diferente tipos de caminos y que no
+                    está
                     limitado a las tradicionales profesiones.
                 </p>
-                <!-- <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p> -->
             </div>
         </div>
     </div>
+</div>
 </div>
