--- a/_pages/speakers2023.html
+++ b/_pages/speakers2023.html
@@ -1,8 +1,8 @@
 ---
 layout: inner
-title: Speakers
+title: Speakers 2023
 lead_text: Nuestras speakers
-permalink: /speakers/
+permalink: /speakers2023/
 ---
 
 <style>
@@ -53,7 +53,7 @@ permalink: /speakers/
 
     <div class="col-sm-6 col-md-6">
         <div class="thumbnail">
-            <img src="/assets/images/coaches/erika.jpeg" alt="Speaker Karen Gutiérrez" width="150" />
+            <img src="/assets/images/speakers/erika.jpeg" alt="Speaker Karen Gutiérrez" width="150" />
             <div class="caption">
                 <h3 class="text-center">Erika Gutiérrez</h3>
                 <p class="role-container">
